the quotes slider works, but i have to fix the overflow width

--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -26,24 +26,38 @@
     width: 20%;
     padding: 1.5rem;
 }
-/* .quotes{
-    display: flex;
+ .quotes{
+    /* max-width: 100%; */
     
-} */
+} 
 
-.slider {
+article {
     
+    position: absolute;
     background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 10%);
-
     border: 2px;
     margin: 5px;
-    padding: 5%;
+    /* padding: 5%; */
+    width: 100vw;
     text-align: center;
+    opacity: 0;
+    transition: all 0.3s linear;
+    /* max-width: 100%; */
     
+}
+article.currentSlide{
+    opacity: 1;
+    transform: translateX(0);
+}article.nextSlide {
+    /* transform: translateX(100); */
 }
 .author{
     display: flex;
     justify-content: center;
+}
+article > p {
+    color: red;
+
 }
 
 
